# BestMLops

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yaml
src/bestmlops/: __init__.py  api.py  local_deploy.py  model.py
web/: index.html
